# MyCastle

./: .env.example  .env.example.bak  .gitignore  01-overview.md  8-MCP-IMPLEMENTATION-PLAN.md  ADMIN_IMPLEMENTATION_TODO.md  ATTENDANCE_ENHANCEMENT_SUMMARY.md  CLAUDE.md  CODE_REVIEW.md  COMMIT_SUMMARY.md  COMPLETED_WORK_SUMMARY.md  COMPONENT_IMPLEMENTATION_SUMMARY.md  DATABASE_SCHEMA_GAPS.md  DEPLOYMENT.md  DESIGN.md  DOCUMENTATION-RESTRUCTURE-REVIEW.md  ENQUIRIES_TEST_RESULTS.md  EXECUTIVE_SUMMARY.md  FASTAPI-MCP-INTEGRATION.md  GETTING-STARTED.md  HOST_SERVICE_COMPLETE.md  IMPLEMENTATION_COMPLETE.md  INTEGRATION_SUMMARY.md  MCP_AGENTS_GUIDE.md  MIGRATIONS_COMPLETED.md  MIGRATION_GUIDE.md  MIGRATION_STATUS.md  MIGRATION_VERIFICATION_PROOF.md  MINIMUM_LOVABLE_PRODUCT.md  MVP-SPRINT-PLAN.md  MVP_SPEC_REVIEW.md  NEXT_STEPS_GUIDE.md  OVER_ENGINEERING_ANALYSIS.md  PROGRESS.md  PROJECT_STATUS_REPORT.md  PULL_REQUEST.md  QUICKSTART.md  QUICK_START.md  QUICK_START_ADMIN_QUERY.md  README.md  (+25 more)
fastapi-server/: .dockerignore  .gitignore  ALL-MCP-SERVERS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
fastapi-server/src/: __init__.py  config.py  main.py
fastapi-server/src/api/: health.py  mcp.py
fastapi-server/src/core/: __init__.py  auth.py  database.py  security.py
fastapi-server/src/mcp/: __init__.py  base.py  host.py  types.py
fastapi-server/tests/: conftest.py  test_academic_mcp.py  test_all_servers.py  test_api.py  test_attendance_mcp.py  test_finance_mcp.py  test_operations_mcp.py  test_student_mcp.py  test_student_services_mcp.py
(+891 files in other folders)
